# oar-api-redux

./: .env.example  .gitignore  README.md
config/: default.toml
crates/oar-api/: Cargo.toml  README.md
crates/oar-api/src/: config.rs  main.rs  state.rs
crates/oar-api/src/handlers/: mod.rs
crates/oar-api/src/handlers/api_keys/: create.rs  dtos.rs  list.rs  mod.rs  revoke.rs
crates/oar-api/src/handlers/resources/: create.rs  delete.rs  dtos.rs  get.rs  list.rs  mod.rs  update_state.rs
crates/oar-api/src/handlers/users/: dtos.rs  get_user.rs  login.rs  mod.rs  register.rs
crates/oar-api/src/middleware/: auth.rs
crates/oar-domain/: Cargo.toml  README.md
crates/oar-domain/src/: lib.rs
crates/oar-domain/src/accounting/: aggregate.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/admission/: aggregate.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/event/: aggregate.rs  entities.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/gantt/: aggregate.rs  entities.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/iam/: errors.rs  models.rs  ports.rs
crates/oar-domain/src/job/: aggregate.rs  entities.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/policy/: aggreggate.rs
crates/oar-domain/src/queue/: aggregate.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/resource/: aggregate.rs  entities.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/ressource/: aggregate.rs  entities.rs  mod.rs  value_objects.rs
crates/oar-domain/src/scheduler/: aggregate.rs  mod.rs  ports.rs  value_objects.rs
crates/oar-domain/src/shared/: aggregate.rs
crates/oar-domain/src/user/: errors.rs  mod.rs  models.rs  ports.rs
crates/oar-domain/src/users/: models.rs  ports.rs
crates/oar-infrastructure/: Cargo.toml  README.md
crates/oar-infrastructure/migrations/: 20260301015753_init.sql  20260306125551_initial.sql  20260306131340_fix_resource_foreign_keysp.sql
crates/oar-infrastructure/src/: config.rs  database.rs  lib.rs  tests.rs
crates/oar-infrastructure/src/repositories/: iam_repo.rs  mod.rs  resource_repo.rs  user_repo.rs
crates/oar-infrastructure/src/services/: auth_service.rs  jwt_service.rs  mod.rs  password_service.rs
