[package]
name = "oar-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
oar-domain = { version = "0.1.0", path = "../oar-domain" }
oar-infrastructure = { version = "0.1.0", path = "../oar-infrastructure" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["serde", "v4"] }

