[package]
name = "oar-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.15.1", features = ["axum","axum-json","swagger","scalar","macros"] }
axum = "0.8.8"
axum-extra = "0.9.0"
async-trait = "0.1.89"
dotenvy = "0.15.7"
oar-domain = { version = "0.1.0", path = "../oar-domain" }
oar-infrastructure = { version = "0.1.0", path = "../oar-infrastructure" }
schemars = {version = "0.9.0", features = ["uuid1","chrono04"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
indexmap = "2.13.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4.3"

[patch.crates-io]
schemars = { version = "0.9.0" }
