[package]
name = "oar-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
oar-domain = { version = "0.1.0", path = "../oar-domain" }
uuid = "1.20.0"
serde = { version = "1.0", features = ["derive"] }

jsonwebtoken = "9.3.0"
argon2 = { version = "0.5.2", features = ["std"] }

time = "0.3.36"
