[package]
name = "oar-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
oar-domain = { version = "0.1.0", path = "../oar-domain" }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }

jsonwebtoken = "9.3.0"
argon2 = { version = "0.5.2", features = ["std"] }

time = "0.3.36"
tokio = { version = "1.0", features = ["full"] }

# Database dependencies
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "migrate"] }
dotenvy = "0.15"
config = "0.14"
tracing = "0.1"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.10.0"
chrono = "0.4.44"
